resized titles on news page, adjusted blockquote spacing, respaced project cards on mobile/tablet, fixed bottom padding on project details, etc.

--- a/styles/global.css
+++ b/styles/global.css
@@ -168,7 +168,7 @@ ul {
 	margin-top: 0;
 }
 
-ul > li:not(:last-child) {
+ul > li:not(:last-child), dt > dl:not(:last-child) {
 	margin-bottom: calc(var(--vertical-rhythm) / 4);
 }
 
@@ -192,6 +192,7 @@ dl {
 	column-gap: var(--gap);
 	grid-column: 1 / 8;
 	align-items: start;
+	padding-bottom: var(--vertical-rhythm);
 }
 dt {
 	grid-column: 1 / 3;
@@ -277,7 +278,7 @@ blockquote {
   margin: calc(var(--vertical-rhythm) / 2) 0;
   padding-left: var(--gap);
   position: relative;
-  transform: translateX(1px);
+  transform: translateX(2px);
 }
 blockquote::before {
 	content: '';
